data/all_generated_tests/raw_wast_tests/br_if_IncorrectConditionEvaluation_1681.wast
;; 2. **Test Description:** Test `br_if` instruction with a false condition (zero value) to ensure the branch is not taken and execution continues. A failure here suggests improper handling of false conditions.    - **Specific Constraint:** Confirm execution continuity with false conditional values.    - **Relation to Incorrect Condition Evaluation:** Validates that branches are not taken for false conditions.

(assert_invalid
  (module (func $br_if_false_condition
    (block (br_if 0 (i32.const 0)) (i32.const 42))
  ))
  "condition evaluation failure"
)